Update wedding proposal text in index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>💍 나랑 결혼해줄래?</title>
+  <title>💍 김채은양은 한솔군과 결혼하시겠습니까? </title>
   <style>
     body {
       margin: 0;
@@ -52,14 +52,14 @@
 <body>
 
 <div class="container">
-  <h1>💍 나랑 결혼해줄래? 💕</h1>
+  <h1>💍 나랑 결혼하자 채은아 💕</h1>
   <button id="yes" onclick="yesClick()">응 ❤️</button>
   <button id="no" onmouseover="moveNo()">싫어 😝</button>
 </div>
 
 <script>
   function yesClick() {
-    document.body.innerHTML = "<h1 style='font-size:40px; color:white;'>역시 내 여자지 ❤️ 사랑해 😘</h1>";
+    document.body.innerHTML = "<h1 style='font-size:40px; color:white;'>많은 선택지 중에서 결혼하기를 고른 너를 평생 행복하게 해줄게 😘</h1>";
     document.body.style.background = "#ff4d6d";
   }
 
